# src/modules/accounts/dtos/ICreateDriverDTO.ts
@@ -1,0 +1,8 @@
+interface ICreateDriverDTO {
+  name: string;
+  email: string;
+  password: string;
+  driverLicense: string;
+}
+
+export { ICreateDriverDTO };
